--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
-    "node": "^21.2.0"
+    "node": "^21.2.0",
+    "nodemailer": "^6.9.8"
   }
 }
